--- a/云南大理丽江香格里拉攻略/云南大理丽江香格里拉攻略.md
+++ b/云南大理丽江香格里拉攻略/云南大理丽江香格里拉攻略.md
@@ -53,4 +53,111 @@
 ### 香格里拉
 
 - 3号早上从丽江坐大巴出发前往香格里拉，离天堂最近的地方
+- 沿滇藏公路一直前行，抵达【长江第一湾】虎跳峡
+- 乘车继续前行抵达香格里拉县城后用餐，之后乘车前往游览茶马古道重镇之一“香格里拉古城”【独克宗月光古城】，独克宗月光古城拥有世界上最大的转经筒，也可顺路去下香巴拉时轮坛城，更深入的了解藏族文化
+- 晚上藏民家访【土司宴】，听歌赏舞，还是比较走心的，尤其是一位60+岁的老奶奶高唱了一首，嘹亮的声音直击内心深处
 
+- po图
+	- 虎跳峡
+		- ![image](IMG_4961.JPG)
+		- ![image](IMG_4962.JPG)
+		- ![image](IMG_5257.JPG)
+
+	- 独克宗月光古城
+		- ![image](IMG_5749.JPG)
+		- ![image](IMG_5750.JPG)
+		- ![image](IMG_5753.JPG)
+		- ![image](IMG_5751.JPG)
+
+	- 香巴拉时轮坛城
+		- ![image](IMG_5754.JPG)
+		- ![image](IMG_5755.JPG)
+	
+	- 土司宴
+		- ![image](IMG_5756.JPG)
+		- ![image](IMG_5757.JPG)
+
+--- 
+
+### 普达措
+
+- 4号早上从香格里拉出发前往普达措国家森林公园，主要游玩属都湖和碧塔海，但由于近期碧塔海生态整治，暂时关闭了，只去了属都湖，无奈天气不好，没有看到想象中的烟雾缭绕，比较遗憾
+- 下午基本就开始乘大巴车返程，回到丽江，晚上6点左右到丽江，可以趁晚上这几个小时再到丽江古城找个安静的酒吧，听听歌
+
+- po 图
+	- 属都湖
+		- ![image](IMG_5758.JPG)
+		- ![image](IMG_5759.JPG)
+		- ![image](IMG_5760.JPG)
+		- ![image](IMG_5761.JPG)
+		- ![image](IMG_5763.JPG)
+
+--- 
+
+### 大理
+
+- 5号早晨从丽江出发前往大理。看下大理的地图，背靠苍山，面临洱海，320国道开上几个小时就可以到达中缅边境
+- 首先去了蝴蝶泉公园，了解白族文化，虽然不在蝴蝶的正季，但是也能看到不少蝴蝶，还有各种各样的蝴蝶标本
+- 下午乘邮轮游洱海，游轮上有白族的三道茶文化体验
+- 邮轮的终点是南诏风情岛，沿途欣赏双廊，洱海风光，双廊目前因为政治污染，商业迁出，暂时全部关闭，已成鬼城，只能远远的看一看
+- 洱海结束后去崇圣寺三塔，寺内要买电动车票，可以节省不少时间
+- 晚上入住大理
+
+- po 图
+
+	- 蝴蝶泉
+		- ![image](IMG_5290.JPG)
+		- ![image](IMG_5265.JPG)
+		- ![image](IMG_5259.JPG)
+		- ![image](IMG_5266.JPG)
+		- ![image](IMG_5287.JPG)
+	- 洱海&南诏风情岛
+		- ![image](IMG_5289.JPG)
+		- ![image](IMG_5272.JPG)
+		- ![image](IMG_5267.JPG)
+		- ![image](IMG_5764.JPG)
+		- ![image](IMG_5765.JPG)
+	- 崇圣寺三塔
+		- ![image](IMG_5285.JPG)
+		- ![image](IMG_5268.JPG)
+		- ![image](IMG_5269.JPG)
+
+--- 
+
+- 6号早上早餐后游览大理古城，天下古城一个样，吃下各种小吃，赵记梅子可以带一点作为伴手礼，尝一尝杨记乳扇，吃不腻的烤火腿。古城商业化气息很浓，不懂的话就不要买银器或玉器了。大理和腾冲是著名的玉石加工地，A货是纯天然的，B货浸泡过的残次品。
+- 中餐后游览苍山
+- 下午可以乘火车返回昆明，睡一觉7号早上达到昆明，也可以坐大巴车回昆明，下午4点出发，晚上9点左右就可以到昆明
+- po图
+	- 大理古城
+		- ![image](IMG_5766.JPG)
+		- ![image](IMG_5767.JPG)
+		- ![image](IMG_5771.JPG)
+	- 苍山
+		- ![image](IMG_5770.JPG)
+		- ![image](IMG_5768.JPG)
+		- ![image](IMG_5769.JPG)
+
+--- 
+
+### 昆明
+
+- 7号早上去趟昆明大学，国内号称最美的大学之一，不大
+- 下午去滇池、西山，滇池污染真心严重，水是绿的，船开过，水上泛起一层白色泡沫，细看总能找到飘在水面的死鱼，滇池边有很多红嘴鸥，每年10月初迁徙过来
+- 大学旁边有一条小吃街，物价良心。旁边还有个动物园，进去转了一圈，看到了草泥马
+- 强烈推荐小吃：越南清池小卷粉
+- 昆明可以带点嘉华鲜花饼作为伴手礼
+
+- po 图
+	- 滇池
+		- ![image](IMG_5295.JPG)
+		- ![image](IMG_5777.JPG)
+		- ![image](IMG_5778.JPG)
+		- ![image](IMG_5779.JPG)
+		- ![image](IMG_5772.JPG)
+		- ![image](IMG_5773.JPG)
+		- ![image](IMG_5775.JPG)
+		- ![image](IMG_5282.JPG)
+
+--- 
+
+### 从昆明返程
