--- a/用得上的商学课/用得上的商学课.md
+++ b/用得上的商学课/用得上的商学课.md
@@ -289,6 +289,47 @@
 
 ## 022 羊群效应 “按销量排序”背后的秘密
 
+
+一个人抬头看天，过了一会，陆陆续续来了一堆人都抬头看天。然后第一个抬头看天的人就问其他人，你们都在这儿看什么呢？其他人说：不是看UFO么？这个人说：我这儿流鼻血，你们都跟着瞎掺和什么呢？这就是典型的羊群效应，它是一种个人的观念和行为受到群体压力的影响，从而和多数人产生一致行为的现象。
+
+就像羊群中的某些羊发现一片肥美的草地，其他羊不假思索的就会一哄而上，全然不顾周围有没有狼，也不管旁边有没有更好的草地。
+
+羊群效应也叫从众效应，1952年的阿希实验最早证明了这种现象的存在，来参加实验的学生会获得两张卡片，一张画有一条竖线，另一张画有长短不同的a、b、c三条竖线。他们要判断第一张卡片上的竖线和第二张卡片上的a/b/c哪条竖线是一样长的。这些线条的长度差异非常明显，一般人一眼就能看出来，但是来参加实验的6个人当中有5个是托儿，实验进行当中，会说出同一个错误答案。比如正确答案是b，但是这5个人会同时喊c，另一个人就懵逼了，心里想：我听过色盲，没听过长短盲啊...结果做了100多次的实验，至少百分之七十六的人选择做了盲从的羊，跟从了其他人的选择。
+
+我们小时候就学过皇帝的新装，很多人时候选择随大流是一种快速而且风险小的决策方式，尤其是在决策信息不充分并且决策较高的情况下。
+
+假想下你是一个原始人，你和同伴去森林里砍柴，突然听到草丛中有窸窸窣窣的声音，几个同伴拔腿就跑，这个时候你会怎么做呢？你停下来思考下草丛里是兔子还是老虎？你不会。你会跟在同伴后面，能跑多快就跑多快，谁要是不这样做，他的基因早就消失掉了。
+
+实际上人们习惯通过观察别人的行为来提取信息，做出快速且省心的决策，人们的信息不断趋同并且强化，最终产生了羊群效应。
+
+生活中羊群效应随处可见。2003年非典，全民疯抢板蓝根。2011年日本核泄漏，全民疯抢食用盐。再到全民疯炒一只妖股，全民疯抢一片学区房。而羊群效应让A股在2007年瞬间拉到6100多点，同样的也是后面几个月瞬间砸到1600多点。
+
+同样的，你回想下自己的个人经历，走在路上路过一家餐厅，发现一家餐厅门口有几个人在排队，可能会比隔壁的那家没有人排队的要好，同样的你也排到了队伍了，最后这个队伍越来越长，所有人都相信自己明智的选择了一家更好的餐馆，但是可能不会意识到，这个决定仅仅取决于最初排队的那两个人。
+
+### 商业应用
+
+- 包装成功案例
+
+	王婆卖瓜在这个时代已经过时了，列举成功案例效果则要好得多，有句话你一定要记住，案例胜过安利。
+	
+	很多服务行业的乙方公司，比如说公关公司、咨询公司、广告代理商、设计工作室等等，他们业务的起步阶段一般都是低价或者免费帮助大公司做项目，因为有了这些和知名公司合作的成功案例，再去开拓市场就会容易很多。对于很多公司而言，做模仿跟进比做第一个吃螃蟹的人容易得多
+	
+- 突显用户规模
+	
+	香飘飘的广告词：一年卖出一亿多杯，可绕地球两圈。已经被奉为业界的经典了。这个广告语没有正面强调奶茶的口味有多好，而是描述了一个极具震撼力的画面，传出了消费者众多的这个一个信息。类似的瓜子二手车说：二手车成交量遥遥领先。可口可乐告诉我们：全世界每秒钟可以卖出两万瓶可乐。加多宝说：全国每卖出10罐凉茶，7罐是加多宝。等等等等。这些都是在广告中突出自己的用户规模，从而赢得消费者的信赖。这也是为什么你在京东或者淘宝购物的时候，有个选项叫：按销量排序
+	
+- 引导用户分享
+
+	在餐厅用餐的时候，如果你把餐厅的菜品和优雅的环境拍照上传到朋友圈，店家可能奖励你一份甜品，如果你在大众点评上写过5星好评，店家可能还会给你个折扣。这些行为本质上都是在诱导用户分享，利用消费者的社交关系进行口碑传播，当人们看到他们的朋友使用某个品牌的时候，也会忍不住跃跃欲试，羊群效应也就自然而然的发生了。
+	
+	移动互联网的发展让微商、微分销红极一时，真正做的好的微商不是不停地安利他的商品有多么多么好，而是着重的强调代理了这个商品，他赚了多少钱，又有多少人跟他订了货，他的生活发生了多么巨大的变化，他又飞机，他又游艇，他又跑车等等等等，有的甚至压根不谈产品本身，这些做法的本质都是诱发羊群的从众效应
+	
+### 总结
+
+一句话总结：案例胜过安利
+
+有人说：人只活这一生，何必随波而主流？这样的观点你同意么？
+
 --- 
 
 ## 023 禀赋效应 孩子还是自己的好？
