--- a/用得上的商学课/01 微观经济 - 成本/03 沉没成本 | 因为来都来了，所以将错就错？.md
+++ b/用得上的商学课/01 微观经济 - 成本/03 沉没成本 | 因为来都来了，所以将错就错？.md
@@ -1,2 +1,31 @@
 ## 03 沉没成本 | 因为来都来了，所以将错就错？
 
+假如你是一个北京的打工仔，每月工资5000，扣除五险一金之后剩下4000多一点，再扣去每月房租2000，还剩下2000多，你一个月的生活费都从这2000块钱里出，吃饭、买东西、聚餐、旅游等等。这时你要出去办一件事，重要但不紧急，你出门只有两种交通工具的选择，一种公交车2块钱，打车62。这时候你选择哪一种交通工具呢？此时一些土豪富婆肯定已经打车走了，但大部分同学会选择等公交。十分钟过去了，公交车没来，你选择打车走么？估计大部分同学还会继续等。好，20分钟过去了公交车还没来，你选择打车走么？估计还有一半的同学在等公交。40分钟过去了，公交车还没来，你打车走么？估计很多人内心已经十分动摇，即使还没有打车，但是内心估计已经很崩溃了。再来最后致命一击，一个小时过去了，公交车还没来，你选择打车走么？这时候很多人就会选择打车走了，这时候想想刚开始的那些土豪富婆，人家一分钟没等花了62打车走了，你等了一个小时，一分钱没省花了62打车走了，你闹心么？而且你有没有发现，刚才你的内心十分的折磨，你等的越久越舍不得放弃，你心里可能会想，为什么刚才我为什么没直接打车走呢？现在等都等这么久了，现在再打车，这叫赔了夫人又折兵。
+
+人并不总是理性的，在做决策的时候往往会被已经发生在过去的成本所影响。经济学上将这种已经发生了却没法收回的投入称之为**沉没成本**。
+
+对大部分人来讲，有个四字魔咒永远绕不开：**来都来了**。只要你来都来了，就会不顾一切的买这个门票，冲破人山人海，逛遍那些没有看过的破景点。只要你来都来了，就回强迫自己吃掉盘子里那个难以下咽的最后一口饭菜。只要你来都来了，你就会坚持强迫自己看完那个让你昏昏欲睡的电影。
+
+经济学不能告诉我们等了一个小时之后，要不要继续等下去。它告诉我们：在这个时间点做决策，无论如何，这一个小时已经沉没了。请不要考虑这已经失去的一个小时，你要不要继续等，只取决于你认为公交车还要多长时间才能来。
+
+### 沉没成本的运用
+
+- 敢于半途而废
+
+	假如你投了100万创业，一年了也不见任何起色，其实你内心挺确定的，这个市场的窗口期已经过了，这个时候你如何选择呢？放弃意味着1年的努力+100万的资金全部打水漂了，坚持意味着你要投入更多的资金、时间、精力，而且十有八九这个结果你已经知道了，结果可能不会很好。那么你内心可能不断地会有个声音在回想：不要半途而废，不要半途而废~
+	
+	这个时候与其说你坚韧不拔，不如说是沉没成本在逼着你不能退。其实在知道是错误的道路上懂得放弃比坚持更可贵。
+	
+- 让人欲罢不能
+
+	故意制造他人的沉没成本，可以为你带来巨大的收益。比如美国有家著名的连锁超市，第三大的零售企业Costco Taiwan 好市多，这家超市在多家线上电商的冲击下，它逆势上扬，保持着惊人的速度在增长。究其原因，是它的会员制，你只有交了55美金成为它的会员，进入它的门店，不交这个55美元，进都进不去。海量的低价商品，你交了这个钱才能享受。这个55美元就相当于商家给你制造的一个沉没成本。让你控制不住你自己，你就算吃不完用不完，你总想再多买一点，你是什么心理呢？你就想着：我只有多买，我才能拿回那个会员费，我摊薄一点，划算么。这种想法一旦作祟，那么商家基本就是坐等数钱了。
+	
+- 创造覆水难收
+
+	有一句说这么说的：如果你想翻过一面墙，就先把帽子扔过去。有的时候给自己设立一个沉没成本的假象，可以起到奇效。比如婚礼就是人们扔到墙那边的一顶大帽子。十分复杂的婚礼筹备让人心力交瘁。但正是劳民伤财的婚礼从心理学上来说，正是给婚姻投入的一种沉没成本，你潜意识可能会说：这么复杂的婚礼，我这辈子都不想再筹备第二次了，办都办了，就好好珍惜吧。所以即将进入婚礼殿堂的新人们，别玩新潮，别学这个裸婚，或者旅游结婚。婚礼、钻戒、大教堂一个都不能少，这份投入，你值得拥有。
+	
+## 小结
+
+因为来都来了，所以将错就错。
+
+有人说：这个世界永远只有投资自己的成本永远不会沉没。这个观点你同意么？
